--- a/3/part3/part3-notes-backend/package.json
+++ b/3/part3/part3-notes-backend/package.json
@@ -1,13 +1,12 @@
 {
   "name": "noteapp",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:ui": "rm -rf build && cd ../part2-notes/ && npm run build && cp -r build ../notes-backend",
+    "build:ui": "@powershell if (Test-Path build) { Remove-Item -Recurse -Force build }; cd E:\\IT_SPACES\\AutoProject\\FullStackOpen\\2\\part2\\part2-notes-frontend && npm run build && @powershell Copy-Item build -Recurse ../notes-backend",
     "deploy": "git push heroku main",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
     "logs:prod": "heroku logs --tail"
@@ -16,9 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.3"
+    "express": "^4.21.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
